@@ -26,6 +26,12 @@ HOW TO UPDATE?
  VERSION 0.4.1 WIP
 -----------------------------------------------------------------------
 
+Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.1
+
+Fixes:
+- Logger:      show_item/hide_item now working
+- ID Stack:    unique labels withing a widget "path" not required anymore
+
 -----------------------------------------------------------------------
  VERSION 0.4.0 (9/28/2020)
 -----------------------------------------------------------------------
